fix: menu gap on navbar in small window

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -185,7 +185,7 @@
     }
 
     body.about-bg {
-        background-image: url("https://res.cloudinary.com/dky8szloh/image/upload/v1770307850/image_leojfs.png");
+        background-image: url("https://res.cloudinary.com/dky8szloh/image/upload/v1770329996/image_ushxnw.webp");
     }
 
     body.contact-bg {
